RESOLVED FIXED126428
[WinCairo] Compile error.
https://bugs.webkit.org/show_bug.cgi?id=126428
Summary [WinCairo] Compile error.
peavo
Reported 2014-01-03 04:33:45 PST
The CFRetain(image) call in MemoryCache::addImageToCache does not compile because the NativeImagePtr type is not an CGImageRef on WinCairo.
Attachments
Patch (2.35 KB, patch)
2014-01-03 04:50 PST, peavo
no flags
peavo
Comment 1 2014-01-03 04:50:56 PST
Brent Fulgham
Comment 2 2014-01-03 08:49:17 PST
Comment on attachment 220297 [details] Patch r=me
WebKit Commit Bot
Comment 3 2014-01-03 09:17:47 PST
Comment on attachment 220297 [details] Patch Clearing flags on attachment: 220297 Committed r161264: <http://trac.webkit.org/changeset/161264>
WebKit Commit Bot
Comment 4 2014-01-03 09:17:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.