[WinCairo] Compile error. https://bugs.webkit.org/show_bug.cgi?id=126428

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-01-03
Reviewed by Brent Fulgham.

The NativeImagePtr type is not an CGImageRef on WinCairo, cannot use CFRetain.

* loader/cache/MemoryCache.cpp: Replace USE(CF) with USE(CG).
* loader/cache/MemoryCache.h: Ditto.

Canonical link: https://commits.webkit.org/144335@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161264 268f45cc-cd09-0410-ab3c-d52691b4dbfc