Source/WebCore/loader/cache/MemoryCache.cpp
@@ -212,8 +212,8 @@ unsigned MemoryCache::liveCapacity() const
     return m_capacity - deadCapacity();
 }
 
-#if USE(CF)
-// FIXME: Remove the USE(CF) once we either make NativeImagePtr a smart pointer on all platforms or
+#if USE(CG)
+// FIXME: Remove the USE(CG) once we either make NativeImagePtr a smart pointer on all platforms or
 // remove the usage of CFRetain() in MemoryCache::addImageToCache() so as to make the code platform-independent.
 bool MemoryCache::addImageToCache(NativeImagePtr image, const URL& url, const String& cachePartition)
 {
